@@ -19,4 +19,6 @@ exclude = Dist::Zilla::Plugin::RemovePrereqs
 [RemovePrereqs]
 remove = MostlyHarmless
 
+[=inc::Foo]
+
 ; authordep Devel::Foo = 0.123
